@@ -119,14 +119,23 @@ WSGI_APPLICATION = 'pishgam_website.wsgi.application'
 # Database
 # https://docs.djangoproject.com/en/2.2/ref/settings/#databases
 
+# DATABASES = {
+#     'default': {
+#         'ENGINE': 'django.db.backends.postgresql_psycopg2',
+#         'NAME': 'tbsh981221',
+#
+#         'PORT': '5432',
+#     }
+# }
+
 DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.postgresql_psycopg2',
-        'NAME': 'tbsh981221',
+        'ENGINE': 'django.db.backends.mysql',
+        'NAME': 'tbsh990426',
         'USER': 'tbsh',
-        'PASSWORD': 'Tabesh1378Pishgam',
+        'PASSWORD': 'Tabesh1399Pishgam',
         'HOST': 'localhost',
-        'PORT': '5432',
+        'PORT': '3306',
     }
 }
 
